# wgpu_memory

./: Cargo.toml  LICENSE  README.md
src/: auto_drop.rs  lib.rs  simple.rs
tests/: auto_dropping_gpu_memory.rs  simple_gpu_memory.rs
tests/common/: mod.rs
