[package]
name = "wgpu_memory"
version = "0.1.0"
edition = "2021"
resolver = "2"


[features]
default = ["log_diagnostics"]
log_diagnostics = []


[dependencies]
parking_lot = "0.12.3"
itertools = "0.13.0"
bytemuck = "1.16.0"
humansize = "2.1.3"
slotmap = "1.0.7"
wgpu = "0.20.0"
log = "0.4.21"


[dev-dependencies]
pollster = "0.3.0"
wgpu = "0.20.1"